# whisperx-nemo-asr

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  test_pipeline.py
whisperx_nemo_pipeline/: __init__.py  helpers.py  transcription_pipeline.py
whisperx_nemo_pipeline/formatters/: __init__.py  base.py  csv.py  factory.py  plaintext.py  srt.py  webvtt.py
whisperx_nemo_pipeline/nemo_msdd_configs/: diar_infer_general.yaml  diar_infer_meeting.yaml  diar_infer_telephonic.yaml
