[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "whisperx-nemo-pipeline"
version = "1.0.7"
description = "Production-ready transcription and diarization pipeline with parallel processing"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "absl-py==2.3.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "alembic==1.16.4",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "asteroid-filterbanks==0.4.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "audioread==3.0.1",
    "av==15.0.0",
    "braceexpand==0.1.7",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "cloudpickle==3.1.1",
    "coloredlogs==15.0.1",
    "colorlog==6.9.0",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "ctranslate2==4.4.0",
    "cycler==0.12.1",
    "cytoolz==1.0.1",
    "datasets==3.2.0",
    "decorator==5.2.1",
    "dill==0.3.8",
    "Distance==0.1.3",
    "docopt==0.6.2",
    "dora_search==0.1.12",
    "editdistance==0.8.1",
    "einops==0.8.1",
    "executing==2.2.0",
    "faster-whisper==1.1.0",
    "fiddle==0.3.0",
    "filelock==3.18.0",
    "flatbuffers==25.2.10",
    "fonttools==4.59.0",
    "frozenlist==1.7.0",
    "fsspec==2024.9.0",
    "future==1.0.0",
    "g2p-en==2.1.0",
    "gitdb==4.0.12",
    "GitPython==3.1.45",
    "graphviz==0.21",
    "greenlet==3.2.4",
    "grpcio==1.74.0",
    "huggingface-hub==0.23.5",
    "humanfriendly==10.0",
    "hydra-core==1.3.2",
    "HyperPyYAML==1.2.2",
    "idna==3.10",
    "inflect==7.5.0",
    "iniconfig==2.1.0",
    "intervaltree==3.1.0",
    "ipython==9.4.0",
    "ipython_pygments_lexers==1.1.1",
    "ipywidgets==8.1.7",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "jiwer==4.0.0",
    "joblib==1.5.1",
    "julius==0.2.7",
    "jupyterlab_widgets==3.0.15",
    "kaldi-python-io==1.2.2",
    "kaldiio==2.18.1",
    "kiwisolver==1.4.9",
    "lameenc==1.8.1",
    "lazy_loader==0.4",
    "Levenshtein==0.27.1",
    "lhotse==1.30.3",
    "libcst==1.8.2",
    "librosa==0.11.0",
    "lightning==2.5.3",
    "lightning-utilities==0.15.2",
    "lilcom==1.8.1",
    "llvmlite==0.44.0",
    "loguru==0.7.3",
    "Mako==1.3.10",
    "Markdown==3.8.2",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.2",
    "marshmallow==4.0.0",
    "matplotlib==3.10.5",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "more-itertools==10.7.0",
    "mpmath==1.3.0",
    "msgpack==1.1.1",
    "multidict==6.6.4",
    "multiprocess==0.70.16",
    "nemo_toolkit==2.0.0rc0",
    "networkx==3.5",
    "nltk==3.9.1",
    "numba==0.61.2",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvtx-cu12==12.8.90",
    "omegaconf==2.3.0",
    "onnx==1.18.0",
    "onnxruntime==1.22.1",
    "openunmix==1.3.0",
    "optuna==4.4.0",
    "packaging==25.0",
    "pandas==2.3.1",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "plac==1.4.5",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "pooch==1.8.2",
    "primePy==1.3",
    "prompt_toolkit==3.0.51",
    "propcache==0.3.2",
    "protobuf==6.31.1",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "pyannote.audio==3.3.2",
    "pyannote.core==5.0.0",
    "pyannote.database==5.1.3",
    "pyannote.metrics==3.2.1",
    "pyannote.pipeline==3.0.1",
    "pyarrow==21.0.0",
    "pybind11==3.0.0",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "pydub==0.25.1",
    "Pygments==2.19.2",
    "pyloudnorm==0.1.1",
    "pyparsing==3.2.3",
    "pytest==8.4.1",
    "python-dateutil==2.9.0.post0",
    "pytorch-lightning==2.5.3",
    "pytorch-metric-learning==2.8.1",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "RapidFuzz==3.13.0",
    "regex==2025.7.34",
    "requests==2.32.4",
    "resampy==0.4.3",
    "retrying==1.4.2",
    "rich==14.1.0",
    "ruamel.yaml==0.18.14",
    "ruamel.yaml.clib==0.2.12",
    "sacremoses==0.1.1",
    "safetensors==0.6.2",
    "scikit-learn==1.7.1",
    "scipy==1.16.1",
    "semver==3.0.4",
    "sentencepiece==0.2.1",
    "sentry-sdk==2.34.1",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sortedcontainers==2.4.0",
    "soundfile==0.13.1",
    "sox==1.5.0",
    "soxr==0.5.0.post1",
    "speechbrain==1.0.3",
    "SQLAlchemy==2.0.43",
    "stack-data==0.6.3",
    "submitit==1.5.3",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorboardX==2.6.4",
    "termcolor==3.1.0",
    "text-unidecode==1.3",
    "texterrors==1.0.9",
    "threadpoolctl==3.6.0",
    "tokenizers==0.19.1",
    "toolz==1.0.0",
    "torch==2.8.0",
    "torch-audiomentations==0.12.0",
    "torch_pitch_shift==1.2.5",
    "torchaudio==2.8.0",
    "torchmetrics==1.8.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.40.2",
    "treetable==0.2.5",
    "triton==3.4.0",
    "typeguard==4.4.4",
    "typer==0.16.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
    "tzdata==2025.2",
    "Unidecode==1.4.0",
    "urllib3==2.5.0",
    "uroman==1.3.1.1",
    "wandb==0.21.1",
    "wcwidth==0.2.13",
    "webdataset==1.0.2",
    "Werkzeug==3.1.3",
    "wget==3.2",
    "whisperx==3.3.1",
    "widgetsnbextension==4.0.14",
    "wrapt==1.17.3",
    "xxhash==3.5.0",
    "yarl==1.20.1"
]
authors = [
    { name = "Paul Borie", email = "paul.borie1@gmail.com" }
]
urls = { "Homepage" = "https://github.com/PaulBorie/whisperx-nemo-parallel" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.setuptools]
packages = { find = { include = ["whisperx_nemo_pipeline", "whisperx_nemo_pipeline.*"] } }
include-package-data = true

[tool.setuptools.package-data]
"whisperx_nemo_pipeline" = [
    "nemo_msdd_configs/*.yaml",
    "vendor/ctc_forced_aligner/ctc_forced_aligner/*.cpp",
    "vendor/ctc_forced_aligner/ctc_forced_aligner/*.h",
    "vendor/ctc_forced_aligner/ctc_forced_aligner/*.lst"
]
